# StowyPhysicsEngine

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  README.md  StowyPhysicsEngine.smproj  _broad_phase_grid_8cpp.html  _broad_phase_grid_8cpp__incl.map  _broad_phase_grid_8cpp__incl.md5  _broad_phase_grid_8hpp.html  _broad_phase_grid_8hpp.js  _broad_phase_grid_8hpp__dep__incl.map  _broad_phase_grid_8hpp__dep__incl.md5  _broad_phase_grid_8hpp__incl.map  _broad_phase_grid_8hpp__incl.md5  _broad_phase_grid_8hpp_source.html  _collider_8cpp.html  _collider_8cpp__incl.map  _collider_8cpp__incl.md5  _collider_8hpp.html  _collider_8hpp.js  _collider_8hpp__dep__incl.map  _collider_8hpp__dep__incl.md5  _collider_8hpp__incl.map  _collider_8hpp__incl.md5  _collider_8hpp_source.html  _collision_8hpp.html  _collision_8hpp.js  _collision_8hpp__dep__incl.map  _collision_8hpp__dep__incl.md5  _collision_8hpp__incl.map  _collision_8hpp__incl.md5  _collision_8hpp_source.html  _collision_body_8cpp.html  _collision_body_8cpp__incl.map  _collision_body_8cpp__incl.md5  _collision_body_8hpp.html  _collision_body_8hpp.js  _collision_body_8hpp__dep__incl.map  (+711 more)
.github/workflows/: main.yml
Demo/: CMakeLists.txt
Demo/include/: AabbBox.hpp  Box.hpp  Circle.hpp  Consts.hpp  DemoBalls.hpp  DemoBallsAndCube.hpp  DemoGjk.hpp  Entity.hpp  FpsCounter.hpp  Game.hpp  MathUtils.hpp  Sphere.hpp  VecUtils.hpp
Demo/src/: AabbBox.cpp  Box.cpp  Circle.cpp  DemoBalls.cpp  DemoBallsAndCube.cpp  DemoGjk.cpp  Entity.cpp  Game.cpp  Sphere.cpp  main.cpp
Exo/: CMakeLists.txt
Exo/src/: main.cpp
MathEngine/: CMakeLists.txt
MathEngine/include/: Vector2.hpp
MathEngine/src/: Vector2.cpp  main.cpp
PhysicsEngine/: CMakeLists.txt
PhysicsEngine/include/: Body.hpp  Collider.hpp  CollisionBody.hpp  CollisionPoints.hpp  Collisions.hpp  Consts.hpp  Game.h  ImpulseSolver.hpp  PhysicsWorld.hpp  Projection.hpp  Rigidbody.hpp  Simplex.hpp  SmoothPositionSolver.hpp  Solver.hpp  Transform.hpp  VecUtils.hpp
PhysicsEngine/src/: Body.cpp  Collider.cpp  CollisionBody.cpp  CollisionWorld.cpp  Collisions.cpp  DynamicsWorld.cpp  Game.cpp  ImpulseSolver.cpp  PhysicsWorld.cpp  Rigidbody.cpp  Simplex.cpp  SmoothPositionSolver.cpp  main.cpp
StowyPhysicsEngine/: CMakeLists.txt  Doxyfile
StowyPhysicsEngine/cmake/: Installing.cmake
StowyPhysicsEngine/include/: CollisionBody.hpp  CollisionPoints.hpp  Collisions.hpp  DynamicsWorld.hpp  Edge.hpp  Rigidbody.hpp  Solver.hpp  Transform.hpp  VecUtils.hpp
StowyPhysicsEngine/include/collision/: BroadPhaseGrid.hpp  Collider.hpp  Collision.hpp  CollisionBody.hpp  CollisionWorld.hpp  Edge.hpp  Manifold.hpp  ManifoldFactory.hpp  Projection.hpp  Simplex.hpp
StowyPhysicsEngine/include/dynamics/: DynamicsWorld.hpp  ImpulseSolver.hpp  Rigidbody.hpp  SmoothPositionSolver.hpp  Solver.hpp
StowyPhysicsEngine/include/math/: Vector2.hpp
StowyPhysicsEngine/src/: CollisionWorld.cpp  Collisions.cpp  Edge.cpp  Game.cpp  Projection.cpp  Rigidbody.cpp  SmoothPositionSolver.cpp  Vector2.cpp
StowyPhysicsEngine/src/collision/: BroadPhaseGrid.cpp  Collider.cpp  CollisionBody.cpp  CollisionWorld.cpp  Edge.cpp  Manifold.cpp  ManifoldFactory.cpp  Projection.cpp  Simplex.cpp
StowyPhysicsEngine/src/dynamics/: DynamicsWorld.cpp  ImpulseSolver.cpp  Rigidbody.cpp  SmoothPositionSolver.cpp  Solver.cpp
StowyPhysicsEngine/src/math/: Vector2.cpp
benchmark/: CMakeLists.txt
benchmark/include/: AabbBox.hpp  Circle.hpp  Entity.hpp
benchmark/src/: AabbBox.cpp  Circle.cpp  Entity.cpp  main.cpp
docs/: environment.yaml  requirements.txt
docs/source/: colRes.rst  colliders.rst  conf.py  index.rst  intro.rst  quickstart.rst  sfml.rst
docs/source/include/: collisionWorld.cpp
project-name/: CMakeLists.txt
project-name/src/: main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  files_0.js  files_1.js  files_2.js  files_5.js  files_6.js  files_7.js  files_8.js  (+38 more)
